--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -26,7 +26,7 @@ neo4j.user=neo4j
 neo4j.password=root
 
 
-app.test=false
+app.test=true
 
 app.insert.mysql.flag=false
 app.clean.mysql.database=false
