--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,5 +1,5 @@
 meta.jdbc.driverClassName=com.mysql.jdbc.Driver
-meta.jdbc.url=jdbc:mysql://127.0.0.1:3306/db_hive
+meta.jdbc.url=jdbc:mysql://127.0.0.1:3306/hive_metastore
 meta.jdbc.username=root
 meta.jdbc.password=root
 
@@ -20,7 +20,7 @@ task.jdbc.password=root
 beeper_data_warehouse.sql.path=/Users/liebaomac/PhpstormProjects/beeper_data_warehouse/job/sql
 beeper_data_warehouse.script.path=/Users/liebaomac/PhpstormProjects/beeper_data_warehouse/job/script
 local_file_path.bad_sql=/Users/liebaomac/IdeaProjects/hive-parser/src/main/java/com/products/bad_sql.txt
-local_file_path.test_sql=/Users/liebaomac/IdeaProjects/hive-parser/src/main/java/com/products/test_sql.txt
+local_file_path.test_sql=/Users/liebaomac/PhpstormProjects/test_warehouse/sql/dim/dim_t.sql
 neo4j.host=bolt://localhost:7687
 neo4j.user=neo4j
 neo4j.password=root
@@ -31,4 +31,4 @@ app.test=true
 app.insert.mysql.flag=false
 app.clean.mysql.database=false
 
-app.insert.neo4j.flag=true
+app.insert.neo4j.flag=false
